# mimetype-detector

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SUPPORTED_FORMATS.md
.github/workflows/: benchmarks.yml  checks.yml  ci.yml  rust.yml
benches/: detection_bench.rs
examples/: basic.rs
src/: constants.rs  kind.rs  lib.rs  macros.rs  mime_type.rs  tree.rs
tests/: api_integration_tests.rs  lib_tests.rs  mimetype_tests.rs
